# nova-supply-hub

./: .env.example  .gitattributes  .gitignore  .vercelignore  Cargo.toml  LICENSE  Makefile  README.md  deployment.json  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/supply-hub/: Cargo.toml
contracts/supply-hub/src/: lib.rs  test.rs
contracts/supply-hub/test_snapshots/test/: test_init_sets_owner_and_name.1.json  test_init_twice_panics.1.json  test_purchase_transfers_tokens_and_updates_balance.1.json  test_purchase_zero_amount_panics.1.json
docs/: SUBMISSION_GUIDE.md
scripts/: deploy-contract.mjs  verify-integration.mjs
src/: App.tsx  index.css  vite-env.d.ts
src/components/: CatalogToolbar.tsx  CopyButton.tsx  DashboardStats.tsx  EventStream.tsx  HeroBanner.tsx  LoadingSpinner.tsx  MobileNav.tsx  PurchaseModal.tsx  QuickActions.tsx  Starfield.tsx  SupplyCard.tsx  SupplyPanel.tsx  Toast.tsx  TransactionProgress.tsx  WalletConnect.tsx
src/context/: ToastContext.tsx  WalletContext.tsx
src/hooks/: useAccountStatus.ts  useContract.ts  useEventStream.ts  useWallet.ts
src/lib/: account.ts  contract.ts  stellarTx.ts
src/test/: contract.test.ts  wallet.test.tsx
