[package]
name = "supply-hub-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", default-features = false, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "all"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
incremental = false
